--- a/page-contact.html
+++ b/page-contact.html
@@ -130,7 +130,7 @@
                 <h4> Call me at 614-371-9498 or </h4>
 <!--                 <h4><a href= mailto:"msberry9@gmail.com"><u>EMAIL ME</u> at </a>msberry9@gmail.com</h4> -->
                  <div class="widget contact-us">
-                  <form method="POST" action="https://formspree.io/msberry9@gmail.com">
+                  <form name="sentMessage" id="contact_form" action="https://formspree.io/msberry9@gmail.com" method="POST">
                     <input type="text" name="name" placeholder="Name" required class="name">
                     <input type="email" name="email" placeholder="Email" required class="email">
                     <textarea name="message" placeholder="Message" required class="msg"></textarea>
