--- a/index.html
+++ b/index.html
@@ -324,8 +324,13 @@
 
               <div class="col-md-offset-30 col-md-4 col-sm-8 col-sm-offset-2 col-xs-12">
                 <h2>CONTACT ME</h2>
-                <h4><a href="mailto:msberry9@gmail.com"><u>Email Me</u> at msberry9@gmail.com</a></h4>
-                <h4> Or call me at 614-371-9498</h4>
+                <h4> Call me at 614-371-9498 or</h4>
+                <div class="widget contact-us">
+                  <form action="https://formspree.io/msberry9@gmail.com" method="POST">
+                      <input type="text" name="name">
+                      <input type="email" name="_replyto">
+                      <input type="submit" value="Send">
+                  </form> 
 <!--                 <h6> email form coming soon </h6>
                <div class="widget contact-us">
                    <form id="contact_form"  role="form"> 
@@ -334,8 +339,8 @@
                     <input type="email" name="email" placeholder="Email" required class="email">
                     <textarea name="message" placeholder="Message" required class="msg"></textarea>
                     <button type="submit" class="normal-btn normal-btn-main btn-size-5">SUBMIT</button>
-                  </form>
-                </div>  -->
+                  </form>-->
+                </div>  
 
               </div>
             </div>
