--- a/index.html
+++ b/index.html
@@ -323,26 +323,24 @@
               </div>
 
               <div class="col-md-offset-30 col-md-4 col-sm-8 col-sm-offset-2 col-xs-12">
-                <h2>CONTACT ME</h2>
-                <h4> Call me at 614-371-9498 or</h4>
-                <div class="widget contact-us">
+                <h5>NEED TO REACH ME?</h5>
+                <h4> Call me at 614-371-9498 or </h4>
+      <!--  <h4><a href= mailto:"msberry9@gmail.com"><u>EMAIL ME</u> at </a>msberry9@gmail.com</h4> -->
+                 <div class="widget contact-us">
                   <form action="https://formspree.io/msberry9@gmail.com" method="POST">
                       <input type="text" name="name">
                       <input type="email" name="_replyto">
                       <input type="submit" value="Send">
                   </form> 
-<!--                 <h6> email form coming soon </h6>
-               <div class="widget contact-us">
-                   <form id="contact_form"  role="form"> 
-                    <form action="contact.php" method="POST"> 
+                 <!--  <form name="sentMessage" id="contact_form" action="https://formspree.io/msberry9@gmail.com" method="POST">
                     <input type="text" name="name" placeholder="Name" required class="name">
                     <input type="email" name="email" placeholder="Email" required class="email">
                     <textarea name="message" placeholder="Message" required class="msg"></textarea>
-                    <button type="submit" class="normal-btn normal-btn-main btn-size-5">SUBMIT</button>
-                  </form>-->
-                </div>  
+                    <button type="submit" name="_replyto" class="normal-btn normal-btn-main btn-size-5">SUBMIT</button>
+                  </form> -->
+                </div> 
+            </div>
 
-              </div>
             </div>
           </div>
         </div>
