--- a/page-contact.html
+++ b/page-contact.html
@@ -131,20 +131,24 @@
 <!--                 <h4><a href= mailto:"msberry9@gmail.com"><u>EMAIL ME</u> at </a>msberry9@gmail.com</h4> -->
                  <div class="widget contact-us">
                   <form action="https://formspree.io/msberry9@gmail.com" method="POST">
-                      <input type="text" name="name">
-                      <input type="email" name="_replyto">
-                      <input type="submit" value="Send">
-                  </form> 
-                 <!--  <form name="sentMessage" id="contact_form" action="https://formspree.io/msberry9@gmail.com" method="POST">
+                    <input type="text" name="name" placeholder="Name" required class="name">
+
+                    <input type="email" name="email" placeholder="Email" required class="email">
+
+                    <textarea name="message" placeholder="Message" required class="msg"></textarea>
+
+                    <button type="submit" name="_replyto" class="normal-btn normal-btn-main btn-size-5" value="Send">SUBMIT</button>
+
+                    <!-- <input type="submit" value="Send"> -->
+                  </form>                  <!--  <form name="sentMessage" id="contact_form" action="https://formspree.io/msberry9@gmail.com" method="POST">
                     <input type="text" name="name" placeholder="Name" required class="name">
                     <input type="email" name="email" placeholder="Email" required class="email">
                     <textarea name="message" placeholder="Message" required class="msg"></textarea>
                     <button type="submit" name="_replyto" class="normal-btn normal-btn-main btn-size-5">SUBMIT</button>
                   </form> -->
                 </div> 
-
-
             </div>
+            
             </div>
           </div>
         </div>
