--- a/page-contact.html
+++ b/page-contact.html
@@ -139,8 +139,10 @@
 
                     <!-- <button type="submit" name="_replyto" class="normal-btn normal-btn-main btn-size-5" value="Send">SUBMIT</button> -->
 
-                     <input type="submit" value="Send">
-                  </form>                  <!--  <form name="sentMessage" id="contact_form" action="https://formspree.io/msberry9@gmail.com" method="POST">
+                   <input type="submit" value="Send">  
+
+                    </button>                  </form>                  
+                  <!--  <form name="sentMessage" id="contact_form" action="https://formspree.io/msberry9@gmail.com" method="POST">
                     <input type="text" name="name" placeholder="Name" required class="name">
                     <input type="email" name="email" placeholder="Email" required class="email">
                     <textarea name="message" placeholder="Message" required class="msg"></textarea>
@@ -148,7 +150,7 @@
                   </form> -->
                 </div> 
             </div>
-            
+
             </div>
           </div>
         </div>
