--- a/aboutme.html
+++ b/aboutme.html
@@ -196,11 +196,14 @@
                       <ul>
                           <li>Logo &amp; Brand Development</li>   
                           <li>Teamwork</li>
+                          <li>Agile</li>
                           <li>Collaboration</li>
                           <li>Video Production </li>
                           <li>Marketing Strategies</li>
                           <li>Social Media</li>
                           <li>CMS</li>
+                          <li>Research </li>
+                          <li>Technology Trends</li>
                         </ul>
                     </div>
                   </div>
