--- a/aboutme.html
+++ b/aboutme.html
@@ -197,13 +197,15 @@
                           <li>Logo &amp; Brand Development</li>   
                           <li>Teamwork</li>
                           <li>Agile</li>
+                          <li>Scrum</li>
                           <li>Collaboration</li>
                           <li>Video Production </li>
                           <li>Marketing Strategies</li>
                           <li>Social Media</li>
                           <li>CMS</li>
-                          <li>Research </li>
+                          <li>Research</li>
                           <li>Technology Trends</li>
+                          <li>Communication</li>
                         </ul>
                     </div>
                   </div>
