--- a/aboutme.html
+++ b/aboutme.html
@@ -179,7 +179,7 @@
                         <ul>
                           <li>Java </li>
                           <li>Spring</li>
-                          <li>MVC</li>                          
+                          <li>MVC Frameworks</li>                
                           <li>SQL</li>
                           <li>Hibernate </li>
                           <li>OOP</li>
