--- a/aboutme.html
+++ b/aboutme.html
@@ -184,6 +184,7 @@
                           <li>Hibernate </li>
                           <li>OOP</li>
                           <li>CPanel</li>
+                          <li>GIT</li>
                         </ul>
                       </div>
                     </div>
