--- a/aboutme.html
+++ b/aboutme.html
@@ -167,6 +167,7 @@
                           <li>Responsive Design </li>
                           <li>Bootstrap</li>
                           <li>Wordpress</li>
+                          <li>Wireframing</li>
                         </ul>
                         </div>
                     </div>
