--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                   <div class="item-content">
                     <p class="comment">&quot; It always seems impossible until it’s done.&quot;</p>
                     <div class="name text-right">
-                      <p>Nelson Mandela</p>
+                      <p> - Nelson Mandela</p>
                     </div>
                   </div>
                 </div>
@@ -280,7 +280,7 @@
                   <div class="item-content">
                     <p class="comment">&quot; Design creates stories, and stories create memorable experiences, and great experiences have this innate ability to change the way in which we view our world. &quot;</p>
                     <div class="name text-right">
-                      <p>Christian Saylor </p>
+                      <p> - Christian Saylor </p>
                     </div>
                   </div>
                 </div>
@@ -289,7 +289,7 @@
                   <div class="item-content">
                     <p class="comment">&quot; I like nonsense, it wakes up the brain cells. Fantasy is a necessary ingredient in living, It's a way of looking at life through the wrong end of a telescope. Which is what I do, And that enables you to laugh at life's realities.&quot;</p>
                     <div class="name text-right">
-                      <p>Dr. Suess</p>
+                      <p> - Dr. Suess</p>
                     </div>
                   </div>
                 </div>
@@ -333,7 +333,7 @@
 
                     <textarea name="message" placeholder="Message" required class="msg"></textarea>
 
-                    <!-- <button type="submit" name="_replyto" class="normal-btn normal-btn-main btn-size-5" value="Send">SUBMIT</button> -->
+                   
 
                      <input type="submit" value="Send">
                   </form> 
