--- a/portfolio.html
+++ b/portfolio.html
@@ -204,6 +204,20 @@
                 </div>
               </div>
 
+               <div class="grid-item portfolio-column col-lg-4 col-md-4 col-sm-6 col-xs-12 software">
+                <div class="portfolio-item portfolio-item-2"><img src="assets/images/vrfit-home.jpg" alt="CREATIVELY DESIGNED">
+                  <div class="overlay">
+                    <div class="cell-vertical-wrapper">
+                      <div class="cell-middle overlay-content text-center">
+                        <h5 class="heading-icon-1">VR Fit</h5>
+                        <div class="font-serif caption">Virtual Reality Fitness website</div>
+                        <div class="group-link"><a href="portfolio-details-vrfit.html" class="icon-link"></a><a href="assets/images/vrfit-home.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
               <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-8 design">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/save-the-date.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
