--- a/portfolio.html
+++ b/portfolio.html
@@ -93,8 +93,8 @@
             <div class="division"><span></span></div>
             <div class="nav-social">
               <ul class="social-01">
-                <li><a href="https://github.com/micaelaberry"><i class="fa fa-github"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/micaela-berry"><i class="fa fa-linkedin"></i></a></li>
+                <li><a href="https://github.com/micaelaberry"><i class="fa fa-github" target="_blank">></i></a></li>
+                <li><a href="https://www.linkedin.com/in/micaela-berry" target="_blank">><i class="fa fa-linkedin"></i></a></li>
                 <li><a href="https://plus.google.com/107768663606450418299" target="_blank"><i class="fa fa-google-plus"> </i></a></li>
                 
               </ul>
@@ -197,7 +197,7 @@
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">Mission Brochure</h5>
                         <div class="font-serif caption">Peace Free Lutheran Church Mission Brochure</div>
-                        <div class="group-link"><a href="#"  class="icon-link"></a><a href="assets/images/peace-mission-brochure.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <div class="group-link"><a href="portfolio-details-peace.html"  class="icon-link"></a><a href="assets/images/peace-mission-brochure.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
