--- a/portfolio-details-peace.html
+++ b/portfolio-details-peace.html
@@ -144,11 +144,11 @@
             </div>
 
             <div class="col-md-5 col-xs-12 section-block-p">
-              <h5 class="smb color-main">Software Development</h5>
-              <h3>ARIA VI</h3>
-              <p>This Capstone project was a "Choose Your Own Adventure" game which implements full-stack development skills. The premise of the game gives the user the ability to use their imagination and problem-solving skills throughout their journey to save the kingdom from the evil necromancer.</p>
+              <h5 class="smb color-main">Graphic Design</h5>
+              <h3>Peace Free Lutheran Mission Brouchre</h3>
+              <p>This brochure was created to inform the members of the church congregation the charities where their monetary contributions are received. The brochure also provides more information about each charity and the contact information for each one. </p>
               <h5 class="font-serif color-main smb"><b>Programs Used:</b></h5>
-              <p>Java, JavaScript, HTML5, CSS3, and Spring MVC.</p>
+              <p>Illustrator, InDesign, Photoshop.</p>
             </div>
           </div>
         </div>
