--- a/portfolio-details-vrfit.html
+++ b/portfolio-details-vrfit.html
@@ -94,7 +94,7 @@
               
               <div class="nav-social">
               <ul class="social-01">
-                <li><a href="https://github.com/micaelaberry"><i class="fa fa-github" target="_blank"></i></a></li>
+                <li><a href="https://github.com/micaelaberry" target="_blank"><i class="fa fa-github" target="_blank"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/micaela-berry" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                 <li><a href="https://plus.google.com/107768663606450418299" target="_blank"><i class="fa fa-google-plus"> </i></a></li>
               </ul>
