--- a/portfolio-details-fortune.html
+++ b/portfolio-details-fortune.html
@@ -120,16 +120,24 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4 col-xs-12 section-block">
+              
               <div>
                 <div class="portfolio-box-slider simple-slider dir-nav">
-                  <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/chsc-mailer.jpg" data-mfp-src="assets/images/chsc-mailer.jpg" alt="Portfolio slider image" class="mfp-item"></div>
+
+                    <div class="portfolio-slider-item">
+                    <div class="item-image"><img src="assets/images/fortune-teller.jpg" data-mfp-src="assets/images/fortune-teller.jpg" alt="Portfolio slider image" class="mfp-item"></div>
                   </div>
+                  
                   <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/chsc-mailer-back.jpg" data-mfp-src="assets/images/chsc-mailer-back.jpg" alt="Portfolio slider image" class="mfp-item"></div>
+                    <div class="item-image"><img src="assets/images/fortune-teller1.jpg" data-mfp-src="assets/images/fortune-teller1.jpg" alt="Portfolio slider image" class="mfp-item"></div>
+                  </div>
+
+                  <div class="portfolio-slider-item">
+                    <div class="item-image"><img src="assets/images/fortune-teller2.jpg" data-mfp-src="assets/images/fortune-teller2.jpg" alt="Portfolio slider image" class="mfp-item"></div>
                   </div>
                 </div>
               </div>
+
             </div>
             <div class="col-md-5 col-xs-12 section-block-p">
               <h5 class="smb color-main">Software Development</h5>
