--- a/aboutme.html
+++ b/aboutme.html
@@ -193,7 +193,7 @@
                   </div>
                   <div class="panel">
                     <div class="panel-heading"><a data-toggle="collapse" data-parent="#accordion-service-1" href="#service-item-1-2" class="collapsed panel-title">
-                        <h5><i class="icon-outline-vector-icons-pack-126"></i>EXTRA</h5></a></div>
+                        <h5><i class="icon-outline-vector-icons-pack-126"></i>EXTRA FUN STUFF</h5></a></div>
                     <div id="service-item-1-2" class="panel-collapse collapse">
                       <div class="panel-body"></div>
                       <ul>
@@ -206,6 +206,7 @@
                           <li>Marketing Strategies</li>
                           <li>Social Media</li>
                           <li>CMS</li>
+                          <li>Passionate</li>
                           <li>Research</li>
                           <li>Technology Trends</li>
                           <li>Communication</li>
