--- a/aboutme.html
+++ b/aboutme.html
@@ -169,6 +169,7 @@
                           <li>Wordpress</li>
                           <li>Wireframing</li>
                           <li>UX/UI</li>
+                          <li>Pursuing: Axure, Salesforce </li>
                         </ul>
                         </div>
                     </div>
