--- a/aboutme.html
+++ b/aboutme.html
@@ -169,7 +169,7 @@
                           <li>Wordpress</li>
                           <li>Wireframing</li>
                           <li>UX/UI</li>
-                          <li>Pursuing: Axure, Salesforce </li>
+                          <li>Pursuing: Axure, Salesforce, Angular </li>
                         </ul>
                         </div>
                     </div>
@@ -188,6 +188,7 @@
                           <li>OOP</li>
                           <li>CPanel</li>
                           <li>GIT</li>
+                          <li>Pursuing: Ruby</li>
                         </ul>
                       </div>
                     </div>
