--- a/aboutme.html
+++ b/aboutme.html
@@ -188,7 +188,7 @@
                           <li>OOP</li>
                           <li>CPanel</li>
                           <li>GIT</li>
-                          <li>Pursuing: Ruby</li>
+                          <li>Pursuing: Ruby, Python</li>
                         </ul>
                       </div>
                     </div>
