--- a/aboutme.html
+++ b/aboutme.html
@@ -209,8 +209,7 @@
                           <li>Social Media</li>
                           <li>CMS</li>
                           <li>Passionate</li>
-                          <li>Research</li>
-                          <li>Technology Trends</li>
+                          <li>Researching Technology Trends</li>
                           <li>Communication</li>
                         </ul>
                     </div>
