change change change

--- a/aboutme.html
+++ b/aboutme.html
@@ -161,7 +161,7 @@
                       <div class="panel-body">
                         <ul>
                           <li>Adobe Creative Suite </li>
-                          <li>HTML &amp; HTML5 </li>
+                          <li>HTML</li>
                           <li>CSS</li>                         
                           <li>JavaScript </li>
                           <li>Responsive Design </li>
