change change change

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <p>
                       <ul>
                           <li>Adobe Creative Suite </li>
-                          <li>HTML &amp; HTML5 </li>
+                          <li>HTML</li>
                           <li>CSS</li>                       
                           <li>JavaScript </li>
                           <li>Responsive Design </li>
