change change change

--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
                           <li>Responsive Design </li>
                           <li>Bootstrap</li>
                           <li>Wordpress</li>
+                          <li>Wireframing</li>
+                          <li>UX/UI</li>
                         </ul>
                       </p></a></div>
               </div>
@@ -162,6 +164,7 @@
                           <li>Hibernate </li>
                           <li>OOP</li>
                           <li>CPanel</li>
+                          <li>GIT</li>
                         </ul>
                       </p></a></div>
               </div>
