--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
                 </div>
               </div>
             </div>
+          </div>
 
 <!--             <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
               <div class="portfolio-item portfolio-item-2"><img src="assets/images/bunker-menu.jpg" alt="bunker">
