--- a/portfolio-details-aria.html
+++ b/portfolio-details-aria.html
@@ -126,6 +126,14 @@
                     <div class="item-image"><img src="assets/images/aria-homepage.jpg" data-mfp-src="assets/images/aria-homepage.jpg" alt="Portfolio slider image" class="mfp-item"></div>
                   </div>
 
+                  <div class="portfolio-slider-item">
+                     <div class="item-image"><img src="assets/images/aria-wireframe.jpg" data-mfp-src="assets/images/aria-wireframe.jpg" alt="Portfolio slider image" class="mfp-item"></div>
+                   </div>
+
+                  <div class="portfolio-slider-item">
+                     <div class="item-image"><img src="assets/images/aria-board.jpg" data-mfp-src="assets/images/aria-board.jpg" alt="Portfolio slider image" class="mfp-item"></div>
+                   </div>
+
                  <div class="portfolio-slider-item">
                     <div class="item-image"><img src="assets/images/aria-intro.jpg" data-mfp-src="assets/images/aria-intro.jpg" alt="Portfolio slider image" class="mfp-item"></div>
                   </div>
