--- a/portfolio-details-aria.html
+++ b/portfolio-details-aria.html
@@ -127,11 +127,11 @@
                   </div>
 
                   <div class="portfolio-slider-item">
-                     <div class="item-image"><img src="assets/images/aria-wireframe.jpg" data-mfp-src="assets/images/aria-wireframe.jpg" alt="Portfolio slider image" class="mfp-item"></div>
+                     <div class="item-image"><img src="assets/images/ariawireframe.jpg" data-mfp-src="assets/images/ariawireframe.jpg" alt="Portfolio slider image" class="mfp-item"></div>
                    </div>
 
                   <div class="portfolio-slider-item">
-                     <div class="item-image"><img src="assets/images/aria-board.jpg" data-mfp-src="assets/images/aria-board.jpg" alt="Portfolio slider image" class="mfp-item"></div>
+                     <div class="item-image"><img src="assets/images/ariaboard.jpg" data-mfp-src="assets/images/ariaboard.jpg" alt="Portfolio slider image" class="mfp-item"></div>
                    </div>
 
                  <div class="portfolio-slider-item">
