--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <header class="site-header">
         <div class="home-fw-slider style-10 caption-slider dir-nav">
           <div class="home-slider-item">
-            <div style="background-image: url('assets/images/tech-red1.jpeg');" class="item-image">
+            <div style="background-image: url('assets/images/tech-red.jpeg');" class="item-image">
               <div class="overlay">
                 <div class="cell-vertical-wrapper">
                   <div class="cell-middle">
