added new web content

--- a/portfolio-details-utility.html
+++ b/portfolio-details-utility.html
@@ -125,11 +125,11 @@
                 <div class="portfolio-box-slider simple-slider dir-nav">
                   
                   <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/fortune-teller1.jpg" data-mfp-src="assets/images/Utility1.tiff" alt="Portfolio slider image" class="mfp-item"></div>
+                    <div class="item-image"><img src="assets/images/Utility1.jpeg" data-mfp-src="assets/images/Utility1.jpg" alt="Portfolio slider image" class="mfp-item"></div>
                   </div>
 
                   <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/fortune-teller2.jpg" data-mfp-src="assets/images/Utility2.tiff"" alt="Portfolio slider image" class="mfp-item"></div>
+                    <div class="item-image"><img src="assets/images/Utility2.jpeg" data-mfp-src="assets/images/Utility2.jpg"" alt="Portfolio slider image" class="mfp-item"></div>
                   </div>
                 </div>
               </div>
