--- a/portfolio.html
+++ b/portfolio.html
@@ -205,6 +205,21 @@
               </div>
 
                <div class="grid-item portfolio-column col-lg-4 col-md-4 col-sm-6 col-xs-12 software">
+                <div class="portfolio-item portfolio-item-2"><img src="assets/images/Utility1.jpg" alt="CREATIVELY DESIGNED">
+                  <div class="overlay">
+                    <div class="cell-vertical-wrapper">
+                      <div class="cell-middle overlay-content text-center">
+                        <h5 class="heading-icon-1">VR Fit</h5>
+                        <div class="font-serif caption">MY Utility Email Marketing</div>
+                        <div class="group-link"><a href="portfolio-details-utility.html" class="icon-link"></a><a href="assets/images/Utility1.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
+               <div class="grid-item portfolio-column col-lg-4 col-md-4 col-sm-6 col-xs-12 software">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/vrfit-home.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
