added new web content

--- a/portfolio-details-utility.html
+++ b/portfolio-details-utility.html
@@ -134,11 +134,12 @@
                 </div>
               </div>
 
+
             </div>
             <div class="col-md-5 col-xs-12 section-block-p">
               <h5 class="smb color-main">Software Development</h5>
               <h3>My Utility Email Marketing</h3>
-              <p>Recieved an InDesign file and was asked to code it to email marketing standards. </p>
+              <p>Received an InDesign file and was asked to code it to email marketing standards. </p>
               <h5 class="font-serif color-main smb"><b>Programs Used:</b></h5>
               <p>HTML, CSS, Sublime, InDesign</p>
             </div>
